# jaxgeometry

./: .gitignore  Euclidean.ipynb  H2.ipynb  Heisenberg.ipynb  README.md  S2.ipynb  S2_statistics.ipynb  SO3.ipynb  SO3_stochastics.ipynb  SPD3.ipynb  T2.ipynb  cylinder.ipynb  diffusion_mean.ipynb  landmarks.ipynb  landmarks_collision.ipynb  landmarks_stochastics.ipynb  lifted_stochastics.ipynb  makefile  pyproject.toml  requirements.txt  setup.py  statistics.ipynb  test.py
examples/: S2.ipynb  S2_statistics.ipynb  SO3.ipynb  SPD3.ipynb  landmarks.ipynb  landmarks_stochastics.ipynb  lifted_stochastics.ipynb
in_progress/: landmarks_controllability.ipynb
jaxgeometry/: params.py  utils.py
jaxgeometry/Riemannian/: Log.py  metric.py  parallel_transport.py
jaxgeometry/dynamics/: Hamiltonian.py  MPP_Kunita.py  MPP_group.py  MPP_landmarks.py  flow.py
jaxgeometry/framebundle/: FM.py
jaxgeometry/group/: LiePoisson.py  energy.py
jaxgeometry/groups/: GLN.py  group.py
jaxgeometry/manifolds/: Euclidean.py  H2.py  Heisenberg.py  cylinder.py  landmarks.py  manifold.py
jaxgeometry/sR/: metric.py
jaxgeometry/statistics/: diffusion_mean.py  tangent_PCA.py
jaxgeometry/stochastics/: Brownian_coords.py  Brownian_sR.py  Eulerian.py  __init__.py  product_sde.py  stochastic_coadjoint.py
papers/: Heisenberg_score.ipynb  SO3_S2_Most_probable_paths_and_development.ipynb  most_probable_landmark_paths.ipynb  most_probable_transformation_for_Kunita_flows.ipynb
src/: __init__.py  multiprocess_utils.py  params.py  plotting.py  setup.py  utils.py
src/Riemannian/: Log.py  curvature.py  geodesic.py  metric.py  parallel_transport.py
src/group/: energy.py  (+4 more)
tests/: test.sh
(+70 files in other folders)
