[project]
name = "jaxdifferentialgeometry"
version = "0.9.4"
authors = [
  { name="Stefan Sommer", email="sommer@di.ku.dk" },
]
description = "Differential geometry using jax"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax",
    "jaxlib",
    "jupyter",
    "matplotlib",
    "scikit-learn",
]

[project.urls]
Homepage = "https://bitbucket.org/stefansommer/jaxgeometry/"
Issues = "https://bitbucket.org/stefansommer/jaxgeometry/issues"

