[project]
name = "jaxdifferentialgeometry"
version = "0.9.4"
authors = [
  { name="Stefan Sommer", email="sommer@di.ku.dk" },
]
description = "Differential geometry using jax"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax",
    "jaxlib",
    "scikit-learn",
]

[project.optional-dependencies]
examples = [
    "jupyter",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/computationalevolutionarymorphometry/jaxgeometry/"
Issues = "https://github.com/computationalevolutionarymorphometry/jaxgeometry/issues"

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "jaxgeometry/_version.py"
